--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Animation and Camera</title>
+		<title>Solar System</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script type = "importmap">
 			{
 				"imports": {
-					"three": "/build/three.module.js",
-					"three/addons/": "/jsm/"
+					"three": "/build/three.module.js"
 				}
 			}
 		</script> 
